--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "homepage": "https://github.com/Noah-TaeHwan/wetube-reloaded#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9"
   }
 }
